tests/eval/good/builtin-div2.scilexp
(* Expected result: 10000000000010 *)
let f = fun (z : Int256) =>
    let b = Int256 40 in
    fun (c : Int256) =>
    	let t = builtin div b c in
	builtin add z t
in
let a = Int256 9999999999990 in
let b = Int256 2 in
f a b
