tests/eval/bad/builtin-overflow13.scilexp
(* Expected result: Underflow *)
(* Int256.int_min = -57896044618658097711785492504343953926634992332820282019728792003956564819968  *)
let a = Int256 -57896044618658097711785492504343953926634992332820282019728792003956564819968 in
builtin add a a
